change color styling

--- a/week2/webApplication_week2/week2_km_miles.html
+++ b/week2/webApplication_week2/week2_km_miles.html
@@ -9,21 +9,8 @@
   <body>
     <!-- HTML -->
     <h1>Kilometers & Mileopsy</h1>
-    <h2>Convert kilometers to miles and miles to kilometers</h2>
     <h3>Author: Troy Washington</h3>
     <hr />
-    <br />
-    <p>Instructions:</p>
-    <i>
-      This web application will convert kilometers to miles and miles to
-      kilometers. Please follow the prompts to complete the conversion.
-    </i>
-    <br />
-    <i>Refresh page to begin.</i>
-    <br />
-    <hr />
-    <br />
-    <br />
     <div class="result"></div>
     <!-- javascript -->
     <script>
@@ -89,10 +76,10 @@
       margin: 20px;
     }
     h1 {
-      color: #2c3e50;
+      color: #30d158;
     }
     h2 {
-      color: #34495e;
+      color: #30d158;
     }
     hr {
       border: 1px solid #bdc3c7;
