--- a/week4/lets_make_a_deal/index.html
+++ b/week4/lets_make_a_deal/index.html
@@ -1,9 +1,24 @@
 <!DOCTYPE html>
-<html lang="en">
+<html>
   <head>
-    <meta charset="UTF-8" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Let's Make a Deal</title>
   </head>
-  <body></body>
+  <body>
+    <h1>Let's Make a Deal</h1>
+    <hr />
+    <p>Choose a door:</p>
+    <select id="doorSelection">
+      <option value="0">Select a Door</option>
+      <option value="1">Door #1</option>
+      <option value="2">Door #2</option>
+      <option value="3">Door #3</option>
+    </select>
+    <button onclick="doorPrize()">Select</button>
+
+    <p id="prize">Good Luck!</p>
+
+    <script>
+      function doorPrize() {}
+    </script>
+  </body>
 </html>
