--- a/week5/deck_of_cards/index.html
+++ b/week5/deck_of_cards/index.html
@@ -7,6 +7,39 @@
   </head>
   <body></body>
   <script>
+    function threeCards() {
+      for (i = 0; i < 3; i++) {
+        let card = getRandomCard();
+        alert(card);
+      }
+      function getRandomCard() {
+        let suits = ["Hearts", "Diamonds", "Clubs", "Spades"];
+        let ranks = [
+          "Ace",
+          "2",
+          "3",
+          "4",
+          "5",
+          "6",
+          "7",
+          "8",
+          "9",
+          "10",
+          "Jack",
+          "Queen",
+          "King",
+        ];
+
+        let randomNumber = Math.floor(Math.random() * 52);
+        let suit = suits[Math.floor(randomNumber / 13)];
+        let rank = ranks[randomNumber % 13];
+
+        return rank + " of " + suit;
+      }
+      //Random number formula for 52 cards (0-51)
+      Math.floor(Math.random() * 52);
+    }
+
     function Card(suit, rank) {
       //create the suit property and assign it the value from the parameter.
       this.suit = suit;
