--- a/week5/deck_of_cards/index.html
+++ b/week5/deck_of_cards/index.html
@@ -3,76 +3,26 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Document</title>
+    <title>Deck of Cards</title>
   </head>
-  <body></body>
-  <script>
-    function threeCards() {
-      for (i = 0; i < 3; i++) {
-        let card = getRandomCard();
-        alert(card);
-      }
-      function getRandomCard() {
-        let suits = ["Hearts", "Diamonds", "Clubs", "Spades"];
-        let ranks = [
-          "Ace",
-          "2",
-          "3",
-          "4",
-          "5",
-          "6",
-          "7",
-          "8",
-          "9",
-          "10",
-          "Jack",
-          "Queen",
-          "King",
-        ];
-
-        let randomNumber = Math.floor(Math.random() * 52);
-        let suit = suits[Math.floor(randomNumber / 13)];
-        let rank = ranks[randomNumber % 13];
-
-        return rank + " of " + suit;
-      }
-      //Random number formula for 52 cards (0-51)
-      Math.floor(Math.random() * 52);
-    }
-
-    function Card(suit, rank) {
-      //create the suit property and assign it the value from the parameter.
-      this.suit = suit;
-      //create the rank property and assign it the value from the parameter.
-      this.rank = rank;
-      //create the isVisible property and assign boolean false to it.
-      this.isVisible = false;
-      //create the show() method.  This method assigns the boolean true to this.isVisible.
-      this.show = function () {
-        this.isVisible = true;
-      };
-      //create the hide() method.  This method assigns the boolean false to this.isVisible.
-      this.hide = function () {
-        this.isVisible = false;
-      };
-    }
-
-    var card1 = new Card("Hearts", 9);
-    var card2 = new Card("Hearts", 10);
-
-    var card3 = Card("Spades", "9");
-    var card4 = Card("Spades", "10");
-
-    alert(card1.suit + " of " + card1.rank + " " + card1.isVisible);
-    alert(card2.suit + " of " + card2.rank + " " + card2.isVisible);
-
-    card02.show();
-    card01.show();
-  </script>
+  <body>
+    <h2>Deck of Cards</h2>
+    <button onclick="threeCards()">Draw Three Random Cards</button>
+  </body>
+  <script src="main.js"></script>
   <!-- 
-    Instantiate at least 2 different cards. (You can call them card1 and card2, or something like that.) 
-    Display the 2 cards to the web page with the Suit, Rank and isVisible values.
-    Use the show() or hide() on both of the cards to change the "isVisible" object property.
-    Again, display the 2 cards to the web page with the Suit, Rank and isVisible values to show the change. 
+// Initialize an empty array to store a deck of cards
+// Loop until the deck of 52 cards
+       //Use Card Object
+       //Outer Loop Suite
+       //Inner Loop Rank
+// Initialize an empty array to store the hand of cards
+// Initialize a counter variable to keep track of the number of cards in hand
+// Loop until the hand has 3 cards
+// Check if the picked card is not already dealt (not in the hand)
+        // Deal the card to the hand
+        // Mark the card as "dealt" to avoid duplicates
+        // Increment the card counter
+// Output the hand of cards
     -->
 </html>
